# hunyuan-2.1

./: .dockerignore  .env.example  DEPLOYMENT_AUDIT.md  Dockerfile  Dockerfile.fast  Dockerfile_new  PIPELINE_FLOW.md  README.md  api_server.py  docker-compose.yml  download_script.py  logs (3).txt  logs (4).txt  logs (5).txt  model_worker.py  pyproject.toml  requirements.txt  textureGenPipeline.py
.claude/: settings.local.json
hy3dgen/: __init__.py
hy3dgen/shapegen/: __init__.py
hy3dgen/texgen/: __init__.py  pipelines.py
hy3dgen/texgen/custom_rasterizer/: pyproject.toml  setup.py
hy3dgen/texgen/differentiable_renderer/: MeshRender.py  compile_mesh_painter.sh  mesh_utils.py  pyproject.toml  setup.py
hy3dpaint/DifferentiableRenderer/: MeshRender.py  mesh_utils.py
hy3dpaint/utils/: image_super_utils.py
hy3dshape/hy3dshape/: schedulers.py
scripts/: build_wheels.sh  deploy.sh  test_api.py
wheels/: custom_rasterizer-0.1-cp311-cp311-linux_x86_64.whl
wheels/wheels/: differentiable_renderer-0.1.0-cp311-cp311-linux_x86_64.whl
