[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hunyuan3d_21"
version = "2.1.0"
description = "Hunyuan3D 2.1 - Production-ready 3D asset generation system"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1", 
    "torchaudio==2.5.1",
    "transformers==4.46.0",
    "diffusers==0.30.0",
    "accelerate==1.1.1",
    "huggingface-hub==0.30.2",
    "safetensors==0.4.4",
    "numpy==1.24.4",
    "scipy==1.14.1",
    "einops==0.8.0",
    "opencv-python==4.10.0.84",
    "imageio==2.36.0",
    "scikit-image==0.24.0",
    "rembg==2.0.65",
    "trimesh==4.4.7",
    "pymeshlab==2022.2.post3",
    "pygltflib==1.16.3",
    "xatlas==0.0.9",
    "open3d==0.18.0",
    "omegaconf==2.3.0",
    "pyyaml==6.0.2",
    "tqdm==4.66.5",
    "psutil==6.0.0",
    "fastapi==0.115.12",
    "uvicorn==0.34.3",
    "pydantic==2.10.6",
    "boto3",
    "runpod",
    "Pillow",
    "pytorch-lightning==1.9.5",
    "cupy-cuda12x==13.4.1",
    "ninja",
    "pybind11",
]

[project.optional-dependencies]
runtime = [
    "realesrgan==0.3.0",
    "basicsr==1.4.2",
    "torchmetrics==1.6.0",
    "timm",
    "torchdiffeq",
]