[build-system]
requires = ["setuptools", "wheel", "pybind11", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "differentiable_renderer_21"
version = "0.1.0"
description = "Differentiable renderer for Hunyuan3D 2.1"
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "trimesh",
]